Adicionei parágrafo e uma lista de itens

--- a/hello.html
+++ b/hello.html
@@ -40,5 +40,12 @@
             <li>Then add several list items in li tags.</li>
             <li>Close your ol tag.</li>
         </ol> 
+        <p>This is a paragraph.</p>
+        <p>This is a <span>second</span> paragraph.</p>
+        <ul>
+            <li>List item <span>  1</span></li>
+            <li>List item <span>  2</span></li>
+            <li>List item <span>  3</span></li>
+        </ul>
     </body>
 </html>
